tests/golden/compile-pass/extern_lua_variadic.rua
extern "lua" {
    fn host_format(template: String, ...) -> String;
}

fn main() {
    let text = host_format("{} {}", 1, 2);
}
