tests/golden/compile-fail/type_map_literal_mixed_values.rua
fn invalid() {
    let values = #{
        "number": 1,
        "boolean": true,
    };
}
